[gd_scene load_steps=53 format=2]

[ext_resource path="res://src/entities/ProjectileEnemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/wizard/wizard_up_shoot.png" type="Texture" id=2]
[ext_resource path="res://sprites/wizard/wizard_left_stand.png" type="Texture" id=3]
[ext_resource path="res://sprites/wizard/wizard_right_stand.png" type="Texture" id=4]
[ext_resource path="res://sprites/wizard/wizard_up_stand.png" type="Texture" id=5]
[ext_resource path="res://sprites/wizard/wizard_down_stand.png" type="Texture" id=6]
[ext_resource path="res://sprites/wizard/wizard_right_walk.png" type="Texture" id=7]
[ext_resource path="res://sprites/wizard/wizard_right_shoot.png" type="Texture" id=8]
[ext_resource path="res://sprites/wizard/wizard_down_walk.png" type="Texture" id=9]
[ext_resource path="res://sprites/wizard/wizard_up_walk.png" type="Texture" id=10]
[ext_resource path="res://sprites/wizard/wizard_down_shoot.png" type="Texture" id=11]
[ext_resource path="res://sprites/wizard/wizard_left_shoot.png" type="Texture" id=12]
[ext_resource path="res://sprites/wizard/wizard_left_walk.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 0, 52, 40, 52 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 40, 52, 40, 52 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "shoot_right",
"speed": 12.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk_left",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk_right",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "shoot_down",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "shoot_left",
"speed": 12.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "walk_up",
"speed": 8.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "shoot_up",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "walk_down",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 10, 4.81229 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 13, 26 )

[node name="Wizard" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
speed = 100.0
attack_speed = 3.0
knockback_speed = 150.0
damage = 0.5
health = 3.0
shoot_length = 4
attack_cooldown_length = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 37 )
animation = "idle_right"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21.2612 )
shape = SubResource( 38 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 39 )

[node name="InvincibilityCooldown" type="Timer" parent="."]
one_shot = true

[node name="Attack" type="AudioStreamPlayer" parent="."]

[node name="MoveCooldown" type="Timer" parent="."]
one_shot = true

[node name="SecondShotCountdown" type="Timer" parent="."]
one_shot = true

[node name="ThirdShotCountdown" type="Timer" parent="."]
one_shot = true
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]
[connection signal="timeout" from="InvincibilityCooldown" to="." method="_on_InvincibilityCooldown_timeout"]
[connection signal="timeout" from="SecondShotCountdown" to="." method="_on_SecondShotCountdown_timeout"]
[connection signal="timeout" from="ThirdShotCountdown" to="." method="_on_ThirdShotCountdown_timeout"]
